--- a/scilab/modules/gui/Makefile.in
+++ b/scilab/modules/gui/Makefile.in
@@ -843,7 +843,7 @@ images/icons/edit-find.png \
 images/icons/edit-redo.png \
 images/icons/edit-undo.png \
 images/icons/media-floppy.png \
-images/icons/aboutscilab.jpg
+images/icons/aboutscilab.png
 
 @GUI_TRUE@USEANT = 1
 all: $(BUILT_SOURCES)
