--- a/scilab/modules/localization/Makefile.am
+++ b/scilab/modules/localization/Makefile.am
@@ -17,6 +17,10 @@ if NEED_JAVA
 LOCALIZATION_C_SOURCES+=src/jni/Messages_wrap.c
 endif
 
+if IS_MACOSX
+SHELL_C_SOURCES += src/c/src/c/getLocaleInfo_Apple.c
+endif
+
 GATEWAY_C_SOURCES = sci_gateway/c/gw_localization.c \
 sci_gateway/c/sci_gettext.c \
 sci_gateway/c/sci_dgettext.c \
