--- a/scilab/modules/localization/Makefile.am
+++ b/scilab/modules/localization/Makefile.am
@@ -44,11 +44,7 @@ pkglib_LTLIBRARIES = libscilocalization.la
 libscilocalization_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION)
 
 if IS_MACOSX
-libscilocalization_la_LDFLAGS += -lintl
-endif
-
-if IS_MACOSX
-libscilocalization_la_LDFLAGS += -lintl
+libscilocalization_la_LDFLAGS += -lintl -framework Cocoa
 endif
 
 libscilocalization_la_SOURCES = $(LOCALIZATION_C_SOURCES)  $(GATEWAY_C_SOURCES)
