--- a/scilab/modules/localization/Makefile.in
+++ b/scilab/modules/localization/Makefile.in
@@ -63,7 +63,7 @@ build_triplet = @build@
 host_triplet = @host@
 @NEED_JAVA_TRUE@am__append_1 = src/jni/Messages_wrap.c
 @IS_MACOSX_TRUE@am__append_2 = src/c/getLocaleInfo_Apple.c
-@IS_MACOSX_TRUE@am__append_3 = -lintl -lintl
+@IS_MACOSX_TRUE@am__append_3 = -lintl -framework Cocoa
 DIST_COMMON = $(libscilocalization_la_include_HEADERS) \
 	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
