Update CFLAGS for MacOS

--- a/scilab/modules/localization/Makefile.am
+++ b/scilab/modules/localization/Makefile.am
@@ -45,6 +45,7 @@ libscilocalization_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION)
 
 if IS_MACOSX
 libscilocalization_la_LDFLAGS += -lintl -framework Cocoa
+libscilocalization_la_CFLAGS += -lintl -framework Cocoa
 endif
 
 libscilocalization_la_SOURCES = $(LOCALIZATION_C_SOURCES)  $(GATEWAY_C_SOURCES)
