--- a/scilab/modules/xcos/Makefile.am
+++ b/scilab/modules/xcos/Makefile.am
@@ -115,7 +115,9 @@ images/blocks/BPLATFORM.gif \
 images/blocks/c_block.gif \
 images/blocks/CANIMXY.gif \
 images/blocks/CANIMXY3D.gif \
+images/blocks/Capacitor.gif \
 images/blocks/CBLOCK.gif \
+images/blocks/CCS.gif \
 images/blocks/CEVENTSCOPE.gif \
 images/blocks/CFSCOPE.gif \
 images/blocks/CLINDUMMY_f.gif \
@@ -131,6 +133,7 @@ images/blocks/CLSS.gif \
 images/blocks/CMAT3D.gif \
 images/blocks/CMATVIEW.gif \
 images/blocks/CMSCOPE.gif \
+images/blocks/ConstantVoltage.gif \
 images/blocks/CONSTRAINT_f.gif \
 images/blocks/COSBLK_f.gif \
 images/blocks/CSCOPE.gif \
@@ -138,6 +141,7 @@ images/blocks/CSCOPXY.gif \
 images/blocks/CSCOPXY3D.gif \
 images/blocks/CUMSUM.gif \
 images/blocks/CurrentSensor.gif \
+images/blocks/CVS.gif \
 images/blocks/DEADBAND.gif \
 images/blocks/DEBUG_SCICOS.gif \
 images/blocks/DELAY_f.gif \
@@ -145,6 +149,7 @@ images/blocks/DELAYV_f.gif \
 images/blocks/DEMUX_f.gif \
 images/blocks/DERIV.gif \
 images/blocks/DIFF_f.gif \
+images/blocks/Diode.gif \
 images/blocks/DLR.gif \
 images/blocks/DLRADAPT_f.gif \
 images/blocks/DLSS.gif \
@@ -180,10 +185,13 @@ images/blocks/GENSQR_f.gif \
 images/blocks/GOTO.gif \
 images/blocks/GOTOMO.gif \
 images/blocks/Ground.gif \
+images/blocks/Gyrator.gif \
 images/blocks/HALT_f.gif \
 images/blocks/HYSTHERESIS.gif \
+images/blocks/IdealTransformer.gif \
 images/blocks/IFTHEL_f.gif \
 images/blocks/IN_f.gif \
+images/blocks/Inductor.gif \
 images/blocks/INTEGRAL_f.gif \
 images/blocks/INTEGRAL_m.gif \
 images/blocks/INTMUL.gif \
@@ -193,6 +201,7 @@ images/blocks/INVBLK.gif \
 images/blocks/ISELECT_m.gif \
 images/blocks/LOGBLK_f.gif \
 images/blocks/LOGIC.gif \
+images/blocks/LOOKUP_f.gif \
 images/blocks/M_freq.gif \
 images/blocks/MATBKSL.gif \
 images/blocks/MATCATH.gif \
@@ -221,13 +230,18 @@ images/blocks/MFCLCK_f.gif \
 images/blocks/MIN_f.gif \
 images/blocks/MUX_f.gif \
 images/blocks/NEGTOPOS_f.gif \
+images/blocks/NMOS.gif \
+images/blocks/NPN.gif \
 images/blocks/OUT_f.gif \
 images/blocks/PerteDP.gif \
 images/blocks/PID.gif \
+images/blocks/PMOS.gif \
+images/blocks/PNP.gif \
 images/blocks/POSTONEG_f.gif \
 images/blocks/PotentialSensor.gif \
 images/blocks/POWBLK_f.gif \
 images/blocks/PROD_f.gif \
+images/blocks/PuitsP.gif \
 images/blocks/QUANT_f.gif \
 images/blocks/RAMP.gif \
 images/blocks/RAND_f.gif \
@@ -236,6 +250,7 @@ images/blocks/RATELIMITER.gif \
 images/blocks/READAU_f.gif \
 images/blocks/READC_f.gif \
 images/blocks/RELAY_f.gif \
+images/blocks/Resistor.gif \
 images/blocks/RFILE_f.gif \
 images/blocks/RICC.gif \
 images/blocks/ROOTCOEF.gif \
@@ -249,6 +264,7 @@ images/blocks/scifunc_block_m.gif \
 images/blocks/SELECT_m.gif \
 images/blocks/SIGNUM.gif \
 images/blocks/SINBLK_f.gif \
+images/blocks/SourceP.gif \
 images/blocks/SPLIT_f.gif \
 images/blocks/SQRT.gif \
 images/blocks/STEP_FUNCTION.gif \
@@ -302,7 +318,9 @@ images/palettes/BPLATFORM.jpg \
 images/palettes/c_block.jpg \
 images/palettes/CANIMXY.jpg \
 images/palettes/CANIMXY3D.jpg \
+images/palettes/Capacitor.jpg \
 images/palettes/CBLOCK.jpg \
+images/palettes/CCS.jpg \
 images/palettes/CEVENTSCOPE.jpg \
 images/palettes/CFSCOPE.jpg \
 images/palettes/CLINDUMMY_f.jpg \
@@ -319,6 +337,7 @@ images/palettes/CMAT3D.jpg \
 images/palettes/CMATVIEW.jpg \
 images/palettes/CMSCOPE.jpg \
 images/palettes/CONST_m.jpg \
+images/palettes/ConstantVoltage.jpg \
 images/palettes/CONSTRAINT_f.jpg \
 images/palettes/CONVERT.jpg \
 images/palettes/COSBLK_f.jpg \
@@ -328,12 +347,15 @@ images/palettes/CSCOPXY.jpg \
 images/palettes/CSCOPXY3D.jpg \
 images/palettes/CUMSUM.jpg \
 images/palettes/CurrentSensor.jpg \
+images/palettes/CURV_f.jpg \
+images/palettes/CVS.jpg \
 images/palettes/DEADBAND.jpg \
 images/palettes/DELAY_f.jpg \
 images/palettes/DELAYV_f.jpg \
 images/palettes/DEMUX.jpg \
 images/palettes/DERIV.jpg \
 images/palettes/DFLIPFLOP.jpg \
+images/palettes/Diode.jpg \
 images/palettes/DLATCH.jpg \
 images/palettes/DLR.jpg \
 images/palettes/DLRADAPT_f.jpg \
@@ -365,10 +387,14 @@ images/palettes/GOTO.jpg \
 images/palettes/GOTOMO.jpg \
 images/palettes/GotoTagVisibility.jpg \
 images/palettes/GotoTagVisibilityMO.jpg \
+images/palettes/Ground.jpg \
+images/palettes/Gyrator.jpg \
 images/palettes/HALT_f.jpg \
 images/palettes/HYSTHERESIS.jpg \
+images/palettes/IdealTransformer.jpg \
 images/palettes/IFTHEL_f.jpg \
 images/palettes/IN_f.jpg \
+images/palettes/Inductor.jpg \
 images/palettes/INIMPL_f.jpg \
 images/palettes/INTEGRAL_f.jpg \
 images/palettes/INTEGRAL_m.jpg \
@@ -381,6 +407,7 @@ images/palettes/JKFLIPFLOP.jpg \
 images/palettes/LOGBLK_f.jpg \
 images/palettes/LOGIC.jpg \
 images/palettes/LOGICAL_OP.jpg \
+images/palettes/LOOKUP_f.jpg \
 images/palettes/M_freq.jpg \
 images/palettes/M_SWITCH.jpg \
 images/palettes/MATBKSL.jpg \
@@ -411,6 +438,8 @@ images/palettes/MIN_f.jpg \
 images/palettes/Modulo_Count.jpg \
 images/palettes/MUX.jpg \
 images/palettes/NEGTOPOS_f.jpg \
+images/palettes/NMOS.jpg \
+images/palettes/NPN.jpg \
 images/palettes/NRMSOM_f.jpg \
 images/palettes/OpAmp.jpg \
 images/palettes/OUT_f.jpg \
@@ -418,11 +447,14 @@ images/palettes/OUTIMPL_f.jpg \
 images/palettes/PDE.jpg \
 images/palettes/PerteDP.jpg \
 images/palettes/PID.jpg \
+images/palettes/PMOS.jpg \
+images/palettes/PNP.jpg \
 images/palettes/POSTONEG_f.jpg \
 images/palettes/PotentialSensor.jpg \
 images/palettes/POWBLK_f.jpg \
 images/palettes/PROD_f.jpg \
 images/palettes/PRODUCT.jpg \
+images/palettes/PuitsP.jpg \
 images/palettes/QUANT_f.jpg \
 images/palettes/RAMP.jpg \
 images/palettes/RAND_m.jpg \
@@ -432,18 +464,22 @@ images/palettes/READC_f.jpg \
 images/palettes/REGISTER.jpg \
 images/palettes/RELATIONALOP.jpg \
 images/palettes/RELAY_f.jpg \
+images/palettes/Resistor.jpg \
 images/palettes/RFILE_f.jpg \
 images/palettes/RICC.jpg \
 images/palettes/ROOTCOEF.jpg \
 images/palettes/SAMPHOLD_m.jpg \
+images/palettes/SampleCLK.jpg \
 images/palettes/SATURATION.jpg \
 images/palettes/SAWTOOTH_f.jpg \
 images/palettes/scifunc_block_m.jpg \
 images/palettes/SELECT_m.jpg \
 images/palettes/SHIFT.jpg \
+images/palettes/Sigbuilder.jpg \
 images/palettes/SIGNUM.jpg \
 images/palettes/SINBLK_f.jpg \
 images/palettes/SineVoltage.jpg \
+images/palettes/SourceP.jpg \
 images/palettes/SQRT.jpg \
 images/palettes/SRFLIPFLOP.jpg \
 images/palettes/STEP_FUNCTION.jpg \
@@ -451,6 +487,7 @@ images/palettes/SUBMAT.jpg \
 images/palettes/SUM_f.jpg \
 images/palettes/SUMMATION.jpg \
 images/palettes/SUPER_f.jpg \
+images/palettes/Switch.jpg \
 images/palettes/SWITCH2_m.jpg \
 images/palettes/SWITCH_f.jpg \
 images/palettes/TANBLK_f.jpg \
@@ -464,6 +501,7 @@ images/palettes/TRASH_f.jpg \
 images/palettes/TrigFun.jpg \
 images/palettes/VanneReglante.jpg \
 images/palettes/VARIABLE_DELAY.jpg \
+images/palettes/VariableResistor.jpg \
 images/palettes/VoltageSensor.jpg \
 images/palettes/VsourceAC.jpg \
 images/palettes/VVsourceAC.jpg \
