--- a/scilab/modules/xcos/src/c/xcos.vcproj
+++ b/scilab/modules/xcos/src/c/xcos.vcproj
@@ -386,6 +386,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\sci_gateway\cpp\sci_warnBlockByUID.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\sci_gateway\cpp\sci_Xcos.cpp"
 				>
 			</File>
