Add buttons to toolbar (Demos+Atoms)

--- a/scilab/modules/xcos/Makefile.in
+++ b/scilab/modules/xcos/Makefile.in
@@ -543,6 +543,8 @@ images/icons/list-remove.png \
 images/icons/media-playback-start.png \
 images/icons/process-stop.png \
 images/icons/view-fullscreen.png \
+images/icons/applications-system.png \
+images/icons/help-browser.png \
 images/palettes/ABS_VALUE.jpg \
 images/palettes/AFFICH_m.jpg \
 images/palettes/ANDBLK.jpg \
