--- a/scilab/modules/gui/Makefile.am
+++ b/scilab/modules/gui/Makefile.am
@@ -311,7 +311,9 @@ images/icons/edit-find.png \
 images/icons/edit-redo.png \
 images/icons/edit-undo.png \
 images/icons/media-floppy.png \
-images/icons/aboutscilab.png
+images/icons/aboutscilab.png \
+images/icons/package-x-generic.png \
+images/icons/applications-system.png
 
 
 if GUI
