--- a/scilab/modules/gui/Makefile.in
+++ b/scilab/modules/gui/Makefile.in
@@ -843,7 +843,9 @@ images/icons/edit-find.png \
 images/icons/edit-redo.png \
 images/icons/edit-undo.png \
 images/icons/media-floppy.png \
-images/icons/aboutscilab.png
+images/icons/aboutscilab.png \
+images/icons/package-x-generic.png \
+images/icons/applications-system.png
 
 @GUI_TRUE@USEANT = 1
 all: $(BUILT_SOURCES)
