--- a/scilab/modules/helptools/src/BuildHelp.vcproj
+++ b/scilab/modules/helptools/src/BuildHelp.vcproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
@@ -26,8 +26,8 @@
 			>
 			<Tool
 				Name="VCNMakeTool"
-				BuildCommandLine="IF EXIST &quot;$(SolutionDir)modules\helptools\javaHelp&quot; rmdir /s /q &quot;$(SolutionDir)modules\helptools\javaHelp&quot;&#x0D;&#x0A;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l en -e xmltojar([],[],&apos;en_US&apos;);exit;&#x0D;&#x0A;rem &quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l fr -e xmltojar([],[],&apos;fr_FR&apos;);exit;&#x0D;&#x0A;rem &quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l pt_BR -e xmltojar([],[],&apos;pt_BR&apos;);exit;&#x0D;&#x0A;"
-				ReBuildCommandLine="IF EXIST &quot;$(SolutionDir)modules\helptools\javaHelp&quot; rmdir /s /q &quot;$(SolutionDir)modules\helptools\javaHelp&quot;&#x0D;&#x0A;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l en -e xmltojar([],[],&apos;en_US&apos;);exit;&#x0D;&#x0A;rem &quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l fr -e xmltojar([],[],&apos;fr_FR&apos;);exit;&#x0D;&#x0A;rem &quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l pt_BR -e xmltojar([],[],&apos;pt_BR&apos;);exit;&#x0D;&#x0A;&#x0D;&#x0A;"
+				BuildCommandLine="IF EXIST &quot;$(SolutionDir)modules\helptools\javaHelp&quot; rmdir /s /q &quot;$(SolutionDir)modules\helptools\javaHelp&quot;&#x0D;&#x0A;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l en -e xmltojar([],[],&apos;en_US&apos;);exit;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l fr -e xmltojar([],[],&apos;fr_FR&apos;);exit;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l pt_BR -e xmltojar([],[],&apos;pt_BR&apos;);exit;&#x0D;&#x0A;"
+				ReBuildCommandLine="IF EXIST &quot;$(SolutionDir)modules\helptools\javaHelp&quot; rmdir /s /q &quot;$(SolutionDir)modules\helptools\javaHelp&quot;&#x0D;&#x0A;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l en -e xmltojar([],[],&apos;en_US&apos;);exit;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l fr -e xmltojar([],[],&apos;fr_FR&apos;);exit;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -nouserstartup -nw -l pt_BR -e xmltojar([],[],&apos;pt_BR&apos;);exit;&#x0D;&#x0A;&#x0D;&#x0A;"
 				CleanCommandLine="IF EXIST &quot;$(SolutionDir)modules\helptools\javaHelp&quot; rmdir /s /q &quot;$(SolutionDir)modules\helptools\javaHelp&quot;&#x0D;&#x0A;&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\helptools\jar&quot; del /q &quot;$(SolutionDir)modules\helptools\jar\scilab_*.jar&quot;  1&gt;NUL 2&gt;NUL&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\jar&quot; del  /q &quot;$(SolutionDir)modules\scicos\jar\scilab_*.jar&quot;  1&gt;NUL 2&gt;NUL&#x0D;&#x0A;&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\help\en_US\scilab_en_US_help&quot;  rmdir /s /q &quot;$(SolutionDir)modules\scicos\help\en_US\scilab_en_US_help&quot;&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\help\en_US\master_help.xml&quot;  del /q &quot;$(SolutionDir)modules\scicos\help\en_US\master_help.xml&quot;  1&gt;NUL 2&gt;NUL&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\help\en_US\.last_successful_build_javaHelp&quot;  del /q &quot;$(SolutionDir)modules\scicos\help\en_US\.last_successful_build_javaHelp&quot;  1&gt;NUL 2&gt;NUL&#x0D;&#x0A;&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\help\fr_FR\scilab_fr_FR_help&quot;  rmdir /s /q &quot;$(SolutionDir)modules\scicos\help\fr_FR\scilab_fr_FR_help&quot;&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\help\fr_FR\master_help.xml&quot;  del /q &quot;$(SolutionDir)modules\scicos\help\fr_FR\master_help.xml&quot;  1&gt;NUL 2&gt;NUL&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\help\fr_FR\.last_successful_build_javaHelp&quot;  del /q &quot;$(SolutionDir)modules\scicos\help\fr_FR\.last_successful_build_javaHelp&quot;  1&gt;NUL 2&gt;NUL&#x0D;&#x0A;&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\help\pt_BR\scilab_pt_BR_help&quot;  rmdir /s /q &quot;$(SolutionDir)modules\scicos\help\pt_BR\scilab_pt_BR_help&quot;&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\help\pt_BR\master_help.xml&quot;  del /q &quot;$(SolutionDir)modules\scicos\help\pt_BR\master_help.xml&quot;  1&gt;NUL 2&gt;NUL&#x0D;&#x0A;IF EXIST &quot;$(SolutionDir)modules\scicos\help\pt_BR\.last_successful_build_javaHelp&quot;  del /q &quot;$(SolutionDir)modules\scicos\help\pt_BR\.last_successful_build_javaHelp&quot;  1&gt;NUL 2&gt;NUL&#x0D;&#x0A;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -l en -nouserstartup -nw -e clean_help();exit;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -l fr -nouserstartup -nw -e clean_help();exit;&#x0D;&#x0A;&quot;$(SolutionDir)bin\scilex.exe&quot; -nb -l pt_BR -nouserstartup -nw -e clean_help();exit;&#x0D;&#x0A;"
 				Output=""
 				PreprocessorDefinitions=""
@@ -39,7 +39,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release|Win32"
+			Name="Debug|x64"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="0"
@@ -59,7 +59,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Debug|x64"
+			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="0"
