--- a/scilab/modules/xpad/src/c/xpad.vcproj
+++ b/scilab/modules/xpad/src/c/xpad.vcproj
@@ -388,6 +388,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\sci_gateway\cpp\sci_closeXpadFromScilab.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\sci_gateway\cpp\sci_xpad.cpp"
 				>
 			</File>
