--- a/scilab/modules/xpad/Makefile.in
+++ b/scilab/modules/xpad/Makefile.in
@@ -129,7 +129,8 @@ am__objects_2 = libscixpad_la-ScilabKeywords.lo
 am__objects_3 = libscixpad_la-ScilabKeywords_wrap.lo
 am__objects_4 = libscixpad_la-gw_xpad.lo
 am__objects_5 = libscixpad_la-sci_xpad.lo \
-	libscixpad_la-sci_xpad_highlightline.lo
+	libscixpad_la-sci_xpad_highlightline.lo \
+	libscixpad_la-sci_closeXpadFromScilab.lo
 am__objects_6 = libscixpad_la-Xpad.lo libscixpad_la-callxpad.lo \
 	libscixpad_la-GiwsException.lo
 am_libscixpad_la_OBJECTS = $(am__objects_2) $(am__objects_3) \
@@ -491,7 +492,8 @@ GIWS_WRAPPERS = src/jni/Xpad.giws.xml
 @SWIG_TRUE@BUILT_SOURCES = swig
 GATEWAY_C_SOURCES = sci_gateway/c/gw_xpad.c
 GATEWAY_CPP_SOURCES = sci_gateway/cpp/sci_xpad.cpp \
-sci_gateway/cpp/sci_xpad_highlightline.cpp
+sci_gateway/cpp/sci_xpad_highlightline.cpp \
+sci_gateway/cpp/sci_closeXpadFromScilab.cpp
 
 libscixpad_la_CFLAGS = $(JAVA_JNI_INCLUDE) \
 			-I$(top_srcdir)/libs/MALLOC/includes/ \
@@ -625,6 +627,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-Xpad.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-callxpad.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-gw_xpad.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-sci_closeXpadFromScilab.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-sci_xpad.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-sci_xpad_highlightline.Plo@am__quote@
 
@@ -711,6 +714,13 @@ libscixpad_la-sci_xpad_highlightline.lo: sci_gateway/cpp/sci_xpad_highlightline.
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='sci_gateway/cpp/sci_xpad_highlightline.cpp' object='libscixpad_la-sci_xpad_highlightline.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscixpad_la-sci_xpad_highlightline.lo `test -f 'sci_gateway/cpp/sci_xpad_highlightline.cpp' || echo '$(srcdir)/'`sci_gateway/cpp/sci_xpad_highlightline.cpp
+
+libscixpad_la-sci_closeXpadFromScilab.lo: sci_gateway/cpp/sci_closeXpadFromScilab.cpp
+@am__fastdepCXX_TRUE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libscixpad_la-sci_closeXpadFromScilab.lo -MD -MP -MF $(DEPDIR)/libscixpad_la-sci_closeXpadFromScilab.Tpo -c -o libscixpad_la-sci_closeXpadFromScilab.lo `test -f 'sci_gateway/cpp/sci_closeXpadFromScilab.cpp' || echo '$(srcdir)/'`sci_gateway/cpp/sci_closeXpadFromScilab.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libscixpad_la-sci_closeXpadFromScilab.Tpo $(DEPDIR)/libscixpad_la-sci_closeXpadFromScilab.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='sci_gateway/cpp/sci_closeXpadFromScilab.cpp' object='libscixpad_la-sci_closeXpadFromScilab.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libscixpad_la-sci_closeXpadFromScilab.lo `test -f 'sci_gateway/cpp/sci_closeXpadFromScilab.cpp' || echo '$(srcdir)/'`sci_gateway/cpp/sci_closeXpadFromScilab.cpp
 
 libscixpad_la-Xpad.lo: src/jni/Xpad.cpp
 @am__fastdepCXX_TRUE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libscixpad_la-Xpad.lo -MD -MP -MF $(DEPDIR)/libscixpad_la-Xpad.Tpo -c -o libscixpad_la-Xpad.lo `test -f 'src/jni/Xpad.cpp' || echo '$(srcdir)/'`src/jni/Xpad.cpp
