ATOMS : Install atoms_gui directory

--- a/scilab/modules/atoms/Makefile.in
+++ b/scilab/modules/atoms/Makefile.in
@@ -355,7 +355,7 @@ libsciatoms_la_etcdir = $(mydatadir)/etc
 libsciatoms_la_etc_DATA = etc/atoms.quit etc/atoms.start etc/repositories
 
 #### atoms : internal functions ####
-MACROSDIRSEXT = macros/atoms_internals
+MACROSDIRSEXT = macros/atoms_internals macros/atoms_gui
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
