add macro importXcosDiagram to import Xcos diagram in Scilab environment

--- a/scilab/modules/xcos/src/c/xcos.vcproj
+++ b/scilab/modules/xcos/src/c/xcos.vcproj
@@ -400,6 +400,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\sci_gateway\cpp\sci_xcosDiagramToHDF5.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\sci_gateway\cpp\sci_xcosNotify.cpp"
 				>
 			</File>
