--- a/scilab/modules/hdf5/Makefile.am
+++ b/scilab/modules/hdf5/Makefile.am
@@ -47,6 +47,7 @@ libscihdf5_la_CFLAGS=		-I$(srcdir)/includes/ \
 				-I$(top_srcdir)/modules/output_stream/includes \
 				-I$(top_srcdir)/modules/api_scilab/includes \
 				-I$(top_srcdir)/modules/localization/includes \
+				-I$(top_srcdir)/modules/fileio/includes \
 				$(HDF5_CFLAGS)
 
 
