--- a/scilab/modules/scicos_blocks/Makefile.am
+++ b/scilab/modules/scicos_blocks/Makefile.am
@@ -410,7 +410,8 @@ libsciscicos_blocks_la_CFLAGS= -I$(srcdir)/includes/ \
 			-I$(top_srcdir)/modules/renderer/includes/ \
 			-I$(top_srcdir)/modules/output_stream/includes \
 			-I$(top_srcdir)/modules/scicos/includes \
-            -I$(top_srcdir)/modules/elementary_functions/includes
+			-I$(top_srcdir)/modules/fileio/includes \
+			-I$(top_srcdir)/modules/elementary_functions/includes
 
 libsciscicos_blocks_la_CPPFLAGS = $(JAVA_JNI_INCLUDE) \
 			-I$(srcdir)/includes/ \
