--- a/scilab/modules/scicos_blocks/Makefile.in
+++ b/scilab/modules/scicos_blocks/Makefile.in
@@ -1317,7 +1317,8 @@ HELP_CHAPTERLANG = en_US fr_FR pt_BR
 @SCICOS_TRUE@			-I$(top_srcdir)/modules/renderer/includes/ \
 @SCICOS_TRUE@			-I$(top_srcdir)/modules/output_stream/includes \
 @SCICOS_TRUE@			-I$(top_srcdir)/modules/scicos/includes \
-@SCICOS_TRUE@            -I$(top_srcdir)/modules/elementary_functions/includes
+@SCICOS_TRUE@			-I$(top_srcdir)/modules/fileio/includes \
+@SCICOS_TRUE@			-I$(top_srcdir)/modules/elementary_functions/includes
 
 @SCICOS_TRUE@libsciscicos_blocks_la_CPPFLAGS = $(JAVA_JNI_INCLUDE) \
 @SCICOS_TRUE@			-I$(srcdir)/includes/ \
